<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="account_name">开户姓名：</string>
    <string name="action_settings">Settings</string>
    <string name="addcard">+ 添加银行卡</string>
    <string name="app_header">闪豆支付</string>
    <string name="app_name">PP一键付</string>
    <string name="authorize">授权银行卡支付</string>
    <string name="bankcard_spr">支持的银行卡</string>
    <string name="bcid">银行卡号：</string>
    <string name="bcid_input">请输入您的银行卡号</string>
    <string name="billpayment">话费支付</string>
    <string name="cancel">取消</string>
    <string name="commodityname">商品名称</string>
    <string name="determine">确定</string>
    <string name="dialog_content">您的身份证信息效验失败，点击确认使用手机话费支付</string>
    <string name="explain">若有问题，请拨打400-610-6655</string>
    <string name="hello_world">Hello world!</string>
    <string name="id_input">请输入开户身份证号</string>
    <string name="id_num">身份证号：</string>
    <string name="information_bill">确认后将在您的手机账户中扣除信息费10元</string>
    <string name="information_identification_verificate">为保证本人使用，请输入开卡身份证后4位数字</string>
    <string name="keypay_typeface">你曾经在360游戏等商家中使用以下银行卡</string>
    <string name="money">￥10.00</string>
    <string name="name_input">请输入开户姓名</string>
    <string name="phone_input">请输入银行卡预留手机号</string>
    <string name="phone_num">手机号码：</string>
    <string name="pp_btn_auth_pay">授权银行卡支付</string>
    <string name="pp_btn_bankcard_pay">>>银行卡支付</string>
    <string name="pp_btn_charge_pay">>>手机话费支付</string>
    <string name="pp_btn_pay">一键支付</string>
    <string name="ppkey">一键支付</string>
    <string name="productsname">新年快乐大礼包</string>
    <string name="reading_a">我已阅读并同意</string>
    <string name="reading_b">《银行卡支付协议》</string>
    <string name="returnbut">返回应用</string>
    <string name="submit_title">为保证本人使用，请输入开卡身份证后4位数字</string>
    <string name="submit_title_input">请输入开卡身份证后4位数字</string>
    <string name="success_submit">提交校验</string>
    <string name="support_success">支付成功</string>
    <string name="support_success_a">"检验通过
交易完成"</string>
    <string name="title">完成本次支付，将为您开通一键支付</string>
    <string name="title_activity_bank_card_protocol">BankCardProtocolActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="verification">请输入验证码</string>
    <string name="verification_time">获取验证码（58）</string>
    <string name="wczf">完成支付</string>
    <string name="zsht_pay_money">支付金额</string>
    <string name="zsht_slogan_1">快乐游戏</string>
    <string name="zsht_slogan_2">一键付</string>
</resources>
